--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Georgia", sans-serif;
+  font-family: "Montserrat", monospace;
   -webkit-tap-highlight-color: transparent;
 }
 
